Fix white space at bottom of root page

--- a/app/assets/stylesheets/root.sass
+++ b/app/assets/stylesheets/root.sass
@@ -27,7 +27,8 @@ body#root
       text-decoration: underline
 
 #landing
-  margin: 50px auto 20px
+  margin: 0 auto
+  padding: 50px 0 20px
   width: $landing-width
 
   #blurb
